# Kimera-Interfacer

./: README.md
kimera_interfacer/: CMakeLists.txt
kimera_interfacer/launch/: gt.launch  kimera_dl_mock.launch  labdata.launch  launch_publish_only.launch  predict.launch  predict_generic_scene.launch
kimera_interfacer/mesh_results/: mesh.ply
kimera_interfacer/notebooks/: ray_cast.ipynb  visu_labels.ipynb
kimera_interfacer/notebooks/.ipynb_checkpoints/: ray_cast-checkpoint.ipynb  visu_labels-checkpoint.ipynb
kimera_interfacer/rviz/: dl_mock.rviz  labdata.rviz
kimera_interfacer/scripts/: PILBridge.py  README.md  dl_mock.py  generate_labels.py  generate_maps.py  label_loader.py  load_protobuf.py  ray_cast_full_scene.py  ray_cast_mesh.py  ray_cast_mesh_pyembree.py
kimera_interfacer/scripts/pseudo_labels/: ray_cast_full_scene_simple.py
kimera_interfacer/scripts/pseudo_labels/label_generation/: __init__.py  label_generator.py  ray_caster.py  voxel_map.py
kimera_interfacer/src/: kimera_interfacer.cpp
